--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "redux-mock-store": "^1.5.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.8",
@@ -25,10 +26,12 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-test-renderer": "^18.3.0",
+    "@types/redux-mock-store": "^1.0.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-react-hooks-shallow": "^1.5.1",
     "react-test-renderer": "^18.3.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
